--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,63 @@
-# Core
-python-telegram-bot==20.6
-python-dotenv==1.0.0
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.5.1
-
-# Text embeddings + clustering
+anyio==4.11.0
+beautifulsoup4==4.12.3
 bertopic==0.15.0
-sentence-transformers==2.2.2
-transformers==4.35.2
-huggingface-hub==0.19.4
-
-# PyTorch CPU
-torch==2.2.1+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
-
-# Clustering
-umap-learn==0.5.5
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+Cython==0.29.37
+DAWG-Python==0.7.2
+docopt==0.6.2
+filelock==3.20.0
+fsspec==2025.10.0
+h11==0.16.0
 hdbscan==0.8.33
-
-# Utils
-tqdm==4.66.1
-
-# Русский язык
+httpcore==1.0.9
+httpx==0.25.2
+huggingface-hub==0.19.4
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.2
+llvmlite==0.45.1
+lxml==5.1.0
+MarkupSafe==3.0.3
+mpmath==1.3.0
+narwhals==2.10.1
+networkx==3.5
+nltk==3.9.2
+numba==0.62.1
+numpy==1.26.4
+packaging==25.0
+pandas==2.2.2
+pillow==12.0.0
+plotly==6.3.1
 pymorphy2==0.9.1
 pymorphy2-dicts-ru==2.4.417127.4579844
-
-# HTML парсинг
-beautifulsoup4==4.12.3
-lxml==5.1.0
+pynndescent==0.5.13
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+python-telegram-bot==20.6
+pytz==2025.2
+PyYAML==6.0.3
+regex==2025.11.3
+requests==2.32.5
+safetensors==0.6.2
+scikit-learn==1.5.1
+scipy==1.16.3
+sentence-transformers==2.2.2
+sentencepiece==0.2.1
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.15.2
+torch==2.2.1+cpu
+torchvision==0.17.1+cpu
+tqdm==4.66.1
+transformers==4.35.2
+typing_extensions==4.15.0
+tzdata==2025.2
+umap-learn==0.5.5
+urllib3==2.5.0
+wheel==0.45.1
