chore: обновлён .gitignore для экспериментальных файлов
- Исключены временные эксперименты (experiments/, grid_search*.py)
- Исключены большие архивы шрифтов (fonts/*.zip)
- Исключены тестовые скрипты (test_*.py, run_experiments.py)

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,16 @@ temp/
 
 # Fonts (large files)
 fonts/*.zip
+
+# Experiments and tests
+experiments/
+test_*.py
+grid_search*.py
+run_experiments.py
+
+# Fonts archives
+fonts/*.zip
+
+# Temp documentation
+readme/
+
